prepare front-end for single placeholder user

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -3,9 +3,11 @@ NEXTAUTH_SECRET=
 NEXT_PUBLIC_URL=
 
 BACKEND_URL=
-BACKEND_SHARED_SECRET=
+BACKEND_SHARED_SECRET=DUMMY_TOKEN # must match FRONTEND_SHARED_SECRET in app-server
 
 SUPABASE_JWT_SECRET=
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
+# This is needed to default the user api key for single-tenant deployment
+USER_API_KEY=
