--- a/app-server/.env.example
+++ b/app-server/.env.example
@@ -1,3 +1,3 @@
 SEMANTIC_SEARCH_URL=http://localhost:8080
 DATABASE_URL="postgres://"
-FRONTEND_SHARED_SECRET=
+FRONTEND_SHARED_SECRET=DUMMY_TOKEN # must match BACKEND_SHARED_SECRET in the frontend
