--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
-SHARED_SECRET=DUMMY_TOKEN 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres_passwordabc
 POSTGRES_DB=postgres
 
 SHARED_SECRET=some_secret
+
 RABBITMQ_DEFAULT_USER=admin
 RABBITMQ_DEFAULT_PASS=adminpasswd
+
+CLICKHOUSE_URL=http://clickhouse:8123
+CLICKHOUSE_USER=default
