--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -58,6 +58,10 @@ aws-credential-types = "1.2.0"
 backoff = { version = "0.4.0", features = ["tokio"] }
 lmnr-baml = { git = "https://github.com/lmnr-ai/lmnr-baml", branch = "rust" }
 lapin = "2.5.0"
+bytes = "1.7.1"
+clickhouse = { version = "0.12.2", features = ["rustls-tls", "uuid"] }
+time = "0.3.36"
+rustls = "0.23.12"
 
 [build-dependencies]
 tonic-build = "0.8"
