--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
     healthcheck:
       test: rabbitmq-diagnostics -q ping
-      interval: 5s
+      interval: 7s
       timeout: 5s
       retries: 3
 
@@ -94,7 +94,7 @@ services:
       - SEMANTIC_SEARCH_URL=http://semantic-search-service:8080
       - RABBITMQ_URL=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbitmq:5672/%2f
       - FRONTEND_SHARED_SECRET=${SHARED_SECRET}
-      - CLICKHOUSE_URL=${CLICKHOUSE_URL}
+      - CLICKHOUSE_URL=http://clickhouse:8123
       - CLICKHOUSE_USER=${CLICKHOUSE_USER}
 
   frontend:
