--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,102 +14,102 @@
     "format:check": "prettier --check \"{app,lib,components}**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@lmnr-ai/lmnr": "^0.3.1",
+    "@headlessui/react": "^2.1.7",
     "@monaco-editor/react": "^4.6.0",
-    "@mux/mux-player-react": "^2.6.0",
+    "@mux/mux-player-react": "^2.9.1",
     "@pnpm/types": "^9.4.2",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@supabase/supabase-js": "^2.42.4",
-    "@tanstack/react-table": "^8.17.3",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-email/components": "^0.0.23",
+    "@react-email/tailwind": "^0.1.0",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/react-table": "^8.20.5",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/recharts": "^1.8.29",
-    "ace-builds": "^1.32.6",
+    "ace-builds": "^1.36.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
-    "eventsource-parser": "^1.1.1",
+    "date-fns": "^3.6.0",
+    "eventsource-parser": "^2.0.1",
     "focus-trap-react": "^10.2.3",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.5.4",
     "i": "^0.3.7",
     "js-base64": "^3.7.7",
-    "js-tiktoken": "^1.0.10",
+    "js-tiktoken": "^1.0.14",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.323.0",
-    "next": "14.2.7",
+    "next": "14.2.3",
     "next-auth": "4.24.5",
     "next-themes": "^0.2.1",
-    "re-resizable": "^6.9.17",
-    "react": "^18.2.0",
+    "re-resizable": "^6.9.18",
+    "react": "^18.3.1",
     "react-ace": "^10.1.0",
     "react-contenteditable": "^3.3.7",
-    "react-dom": "^18.2.0",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
-    "react-intersection-observer": "^9.7.0",
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
-    "react-resizable-panels": "^2.0.22",
+    "react-resizable-panels": "^2.1.2",
     "react-select": "^5.8.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-tag-input-component": "^2.0.2",
     "react-textarea-autosize": "^8.5.3",
-    "reactflow": "^11.10.3",
+    "reactflow": "^11.11.4",
     "recharts": "^2.12.7",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "sharp": "^0.33.4",
-    "stripe": "^16.2.0",
+    "sharp": "^0.33.5",
     "swr": "^2.2.5",
     "uuid": "^9.0.1",
-    "yaml": "^2.5.0",
-    "yjs": "^13.6.18",
-    "zustand": "^4.5.0"
+    "yaml": "^2.5.1",
+    "yjs": "^13.6.19",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.11.16",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@types/react-syntax-highlighter": "^15.5.11",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^22.5.4",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-tailwindcss": "^3.14.2",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "postcss": "^8.4.45",
+    "prettier": "^3.3.3",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.11",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.6.2"
   },
   "prettier": {
     "arrowParens": "always",
