pre-built self-host images

--- a/docker-compose-local-dev.yml
+++ b/docker-compose-local-dev.yml
@@ -47,7 +47,9 @@ services:
         hard: 262144
 
   semantic-search-service:
-    image: ghcr.io/lmnr-ai/semantic-search-service
+    build:
+      context: ./semantic-search-service
+    container_name: semantic-search-service
     ports:
       - "8080:8080"
     depends_on:
@@ -74,7 +76,11 @@ services:
         target: /var/lib/postgresql/data
 
   app-server:
-    image: ghcr.io/lmnr-ai/app-server
+    build:
+      context: ./app-server
+      args:
+        DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+    container_name: app-server
     ports:
       - "8000:8000"
       - "8001:8001"
@@ -98,7 +104,9 @@ services:
       - CLICKHOUSE_USER=${CLICKHOUSE_USER}
 
   frontend:
-    image: ghcr.io/lmnr-ai/frontend
+    build:
+      context: ./frontend
+    container_name: frontend
     ports:
       - "3000:3000"
     env_file: ./frontend/.env.local.example
