[#25] improve guides for local development

--- a/app-server/.env.example
+++ b/app-server/.env.example
@@ -1,5 +1,11 @@
 SEMANTIC_SEARCH_URL=http://localhost:8080
-DATABASE_URL="postgres://"
+# postgres://user:password@host:port/dbname
+DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5432/postgres"
 FRONTEND_SHARED_SECRET=DUMMY_TOKEN # must match BACKEND_SHARED_SECRET in the frontend
 CLICKHOUSE_URL=http://clickhouse:8123
+CLICKHOUSE_USER=default
+PORT=8000
+GRPC_PORT=8001
+RABBITMQ_URL=amqp://admin:adminpasswd@localhost:5672/%2f
+CLICKHOUSE_URL=http://localhost:8123
 CLICKHOUSE_USER=default
