--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -2,9 +2,10 @@ NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=some_secret
 NEXT_PUBLIC_URL=0.0.0.0:3000
 
-BACKEND_URL=http://app-server:8000
+BACKEND_URL=http://localhost:8000
 BACKEND_SHARED_SECRET=DUMMY_TOKEN # must match FRONTEND_SHARED_SECRET in app-server
 
+# these variables are required for supabase realtime
 SUPABASE_JWT_SECRET=
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
