change the length to 120

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "type-check": "tsc --noEmit",
-    "format:write": "prettier --write \"{app,lib,components}/**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"{app,lib,components}**/*.{ts,tsx,mdx}\" --cache"
+    "format:write": "prettier --write \"{app,lib,components}/**/*.{ts,tsx}\" --cache",
+    "format:check": "prettier --check \"{app,lib,components}**/*.{ts,tsx}\" --cache"
   },
   "dependencies": {
     "@codemirror/lang-json": "^6.0.1",
