--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -2,15 +2,10 @@
   "extends": ["next/core-web-vitals", "prettier"],
   "rules": {
     "indent": ["error", 2],
-    
     "eol-last": ["error", "always"],
-    
-    "max-len": ["error", { "code": 80, "ignoreUrls": true, "ignoreStrings": true, "ignoreTemplateLiterals": true }],
-    
-    
+    "max-len": ["error", { "code": 120, "ignoreUrls": true, "ignoreStrings": true, "ignoreTemplateLiterals": true }],
     "semi": ["error", "always"], 
-    "quotes": ["error", "single"], 
     "no-trailing-spaces": ["error"], 
-    "arrow-body-style": ["error", "as-needed"] 
+    "arrow-body-style": ["warn", "as-needed"] 
   }
 }
