--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -65,6 +65,8 @@ rustls = { version = "0.23.12", features = ["ring"] }
 serde_repr = "0.1.19"
 num_cpus = "1.16.0"
 sha3 = "0.10.8"
+aws-sdk-s3 = "1.57.0"
+base64 = "0.22.1"
 
 [build-dependencies]
 tonic-build = "0.12.3"
