add features, squash migrations

--- a/app-server/.env.example
+++ b/app-server/.env.example
@@ -11,3 +11,5 @@ RABBITMQ_URL=amqp://admin:adminpasswd@localhost:5672/%2f
 
 CLICKHOUSE_URL=http://localhost:8123
 CLICKHOUSE_USER=default
+
+SHARED_SECRET_TOKEN=DUMMY_TOKEN
