--- a/docker-compose-local-build.yml
+++ b/docker-compose-local-build.yml
@@ -101,7 +101,7 @@ services:
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       - SEMANTIC_SEARCH_URL=http://semantic-search-service:8080
       - RABBITMQ_URL=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbitmq:5672/%2f
-      - FRONTEND_SHARED_SECRET=${SHARED_SECRET}
+      - SHARED_SECRET_TOKEN=${SHARED_SECRET}
       - CLICKHOUSE_URL=http://clickhouse:8123
       - CLICKHOUSE_USER=${CLICKHOUSE_USER}
 
