--- a/app-server/.env.example
+++ b/app-server/.env.example
@@ -13,3 +13,4 @@ CLICKHOUSE_URL=http://localhost:8123
 CLICKHOUSE_USER=default
 
 SHARED_SECRET_TOKEN=DUMMY_TOKEN
+CODE_EXECUTOR_URL=http://localhost:8811
