--- a/docker-compose-local-build.yml
+++ b/docker-compose-local-build.yml
@@ -77,6 +77,13 @@ services:
         source: postgres-data
         target: /var/lib/postgresql/data
 
+  python-executor:
+    build:
+      context: ./python-executor
+    container_name: python-executor
+    ports: 
+      - "8811:8811"
+
   app-server:
     build:
       context: ./app-server
@@ -95,6 +102,8 @@ services:
         condition: service_healthy
       clickhouse:
         condition: service_started
+      python-executor:
+        condition: service_started
     environment:
       - PORT=8000
       - GRPC_PORT=8001
@@ -104,6 +113,7 @@ services:
       - SHARED_SECRET_TOKEN=${SHARED_SECRET}
       - CLICKHOUSE_URL=http://clickhouse:8123
       - CLICKHOUSE_USER=${CLICKHOUSE_USER}
+      - CODE_EXECUTOR_URL=http://python-executor:8811
 
   frontend:
     build:
