--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,12 @@ services:
       - COHERE_API_KEY=${COHERE_API_KEY}
     pull_policy: always
 
+  python-executor:
+    image: ghcr.io/lmnr-ai/python-executor
+    ports:
+      - "8811:8811"
+    pull_policy: always
+
   postgres:
     build:
       context: ./postgres
@@ -102,6 +108,7 @@ services:
       - SHARED_SECRET_TOKEN=${SHARED_SECRET}
       - CLICKHOUSE_URL=http://clickhouse:8123
       - CLICKHOUSE_USER=${CLICKHOUSE_USER}
+      - CODE_EXECUTOR_URL=http://python-executor:8811
 
   frontend:
     image: ghcr.io/lmnr-ai/frontend
