--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -67,6 +67,7 @@ num_cpus = "1.16.0"
 sha3 = "0.10.8"
 aws-sdk-s3 = "1.57.0"
 base64 = "0.22.1"
+sodiumoxide = "0.2.7"
 
 [build-dependencies]
 tonic-build = "0.12.3"
