--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.35.1",
     "eventsource-parser": "^2.0.1",
     "focus-trap-react": "^10.3.0",
     "framer-motion": "^11.11.9",
@@ -74,6 +76,7 @@
     "next": "14.2.15",
     "next-auth": "4.24.5",
     "next-themes": "^0.2.1",
+    "postgres": "^3.4.4",
     "posthog-js": "^1.174.0",
     "posthog-node": "^4.2.1",
     "re-resizable": "^6.10.0",
@@ -117,6 +120,7 @@
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.10.0",
     "autoprefixer": "^10.4.20",
+    "drizzle-kit": "^0.26.2",
     "eslint": "^8.57.1",
     "eslint-config-love": "^84.1.1",
     "eslint-config-next": "14.2.15",
