fix env vars for docker-compose

--- a/docker-compose-local-build.yml
+++ b/docker-compose-local-build.yml
@@ -110,7 +110,7 @@ services:
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       - SEMANTIC_SEARCH_URL=http://semantic-search-service:8080
       - RABBITMQ_URL=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbitmq:5672/%2f
-      - SHARED_SECRET_TOKEN=${SHARED_SECRET}
+      - SHARED_SECRET_TOKEN=${SHARED_SECRET_TOKEN}
       - CLICKHOUSE_URL=http://clickhouse:8123
       - CLICKHOUSE_USER=${CLICKHOUSE_USER}
       - CODE_EXECUTOR_URL=http://python-executor:8811
@@ -121,11 +121,11 @@ services:
     container_name: frontend
     ports:
       - "3000:3000"
-    env_file: ./frontend/.env.local.example
     environment:
       - PORT=3000
       - BACKEND_URL=http://app-server:8000
-      - BACKEND_SHARED_SECRET=${SHARED_SECRET}
+      - SHARED_SECRET_TOKEN=${SHARED_SECRET_TOKEN}
+      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
 
 volumes:
   qdrant-data:
