add shared secret tokens back to .env.example files

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -12,6 +12,7 @@ BACKEND_URL=
 SUPABASE_JWT_SECRET=
 
 NEXT_OTEL_FETCH_DISABLED=1
+SHARED_SECRET_TOKEN=some_secret
 
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
