--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -1,5 +1,7 @@
-# This compose definition builds Laminar images locally. This is meant to be
-# run at the last step of local development as a check before pushing changes.
+# This compose definition pulls the latest images from the GitHub Container Registry.
+# This is the best and fastest for self hosting, as the images are already built and ready to go.
+# If you want to build images locally, you can use the docker-compose-local-build.yml file instead.
+
 name: lmnr
 
 services:
@@ -21,9 +23,9 @@ services:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
     healthcheck:
-      test: rabbitmq-diagnostics -q ping
-      interval: 7s
-      timeout: 5s
+      test: rabbitmq-diagnostics -q check_running && rabbitmq-diagnostics -q check_local_alarms
+      interval: 10s
+      timeout: 10s
       retries: 3
 
   clickhouse:
@@ -49,9 +51,7 @@ services:
         hard: 262144
 
   semantic-search-service:
-    build:
-      context: ./semantic-search-service
-    container_name: semantic-search-service
+    image: ghcr.io/lmnr-ai/semantic-search-service
     ports:
       - "8080:8080"
     depends_on:
@@ -61,6 +61,13 @@ services:
       - QDRANT_URL=http://qdrant:6334
       - COHERE_ENDPOINT=https://api.cohere.ai/v1/embed
       - COHERE_API_KEY=${COHERE_API_KEY}
+    pull_policy: always
+
+  python-executor:
+    image: ghcr.io/lmnr-ai/python-executor
+    ports:
+      - "8811:8811"
+    pull_policy: always
 
   postgres:
     image: postgres:16
@@ -78,19 +85,8 @@ services:
       timeout: 5s
       retries: 5
 
-  python-executor:
-    build:
-      context: ./python-executor
-    container_name: python-executor
-    ports: 
-      - "8811:8811"
-
   app-server:
-    build:
-      context: ./app-server
-      args:
-        DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
-    container_name: app-server
+    image: ghcr.io/lmnr-ai/app-server
     ports:
       - "8000:8000"
       - "8001:8001"
@@ -103,26 +99,23 @@ services:
         condition: service_healthy
       clickhouse:
         condition: service_started
-      python-executor:
-        condition: service_started
+    pull_policy: always
     environment:
       - PORT=8000
       - GRPC_PORT=8001
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       - SEMANTIC_SEARCH_URL=http://semantic-search-service:8080
       - RABBITMQ_URL=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbitmq:5672/%2f
-      - SHARED_SECRET_TOKEN=${SHARED_SECRET_TOKEN}
       - CLICKHOUSE_URL=http://clickhouse:8123
       - CLICKHOUSE_USER=${CLICKHOUSE_USER}
       - CODE_EXECUTOR_URL=http://python-executor:8811
+      - SHARED_SECRET_TOKEN=${SHARED_SECRET_TOKEN}
       - ENVIRONMENT=FULL
-
   frontend:
-    build:
-      context: ./frontend
-    container_name: frontend
+    image: ghcr.io/lmnr-ai/frontend
     ports:
       - "3000:3000"
+    pull_policy: always
     depends_on:
       postgres:
         condition: service_healthy
@@ -131,6 +124,9 @@ services:
       - BACKEND_URL=http://app-server:8000
       - SHARED_SECRET_TOKEN=${SHARED_SECRET_TOKEN}
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      - NEXTAUTH_URL=http://localhost:3000
+      - NEXTAUTH_SECRET=some_secret
+      - NEXT_PUBLIC_URL=http://localhost:3000
       - ENVIRONMENT=FULL
 
 volumes:
