add default vars to environment example in frontend

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,5 +1,5 @@
-NEXTAUTH_URL=
-NEXTAUTH_SECRET=
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=next_secret_abc
 
 AUTH_GITHUB_ID=
 AUTH_GITHUB_SECRET=
@@ -13,6 +13,12 @@ SUPABASE_JWT_SECRET=
 
 NEXT_OTEL_FETCH_DISABLED=1
 SHARED_SECRET_TOKEN=some_secret
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres_passwordabc
+POSTGRES_DB=postgres
+DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5432/postgres"
+BASE_URL=http://localhost:8000
+
 
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
