--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,27 +1,27 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=next_secret_abc
+BACKEND_URL=http://localhost:8000
+NEXT_OTEL_FETCH_DISABLED=1
+SHARED_SECRET_TOKEN=some_secret
 
+# these must match what you have in your docker-compose-local-dev.yml for postgres
+# postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@{host}:5432/${POSTGRES_DB}
+DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5432/postgres"
+
+# replace with FULL if you are testing with a full stack
+# ENVIRONMENT=FULL
+ENVIRONMENT=LITE # this disables runtime dependency on clickhouse
+
+# for realtime
+SUPABASE_JWT_SECRET=
+# for auth
 AUTH_GITHUB_ID=
 AUTH_GITHUB_SECRET=
-
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 
-BACKEND_URL=
-
-SUPABASE_JWT_SECRET=
-
-NEXT_OTEL_FETCH_DISABLED=1
-SHARED_SECRET_TOKEN=some_secret
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres_passwordabc
-POSTGRES_DB=postgres
-DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5432/postgres"
-BASE_URL=http://localhost:8000
-
-
+# for s3
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-
-ENVIRONMENT=FULL
+S3_IMGS_BUCKET=
