insert human eval scores to clickhouse

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -25,3 +25,6 @@ AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 S3_IMGS_BUCKET=
+
+CLICKHOUSE_URL=http://localhost:8123
+CLICKHOUSE_USER=default
