--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "i": "^0.3.7",
     "js-base64": "^3.7.7",
     "js-tiktoken": "^1.0.15",
+    "json-2-csv": "^5.5.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.323.0",
     "next": "14.2.15",
