allow indexing datasets, expose semantic search as API

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,6 +1,7 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=next_secret_abc
 BACKEND_URL=http://localhost:8000
+SEMANTIC_SEARCH_URL=http://localhost:8080
 NEXT_OTEL_FETCH_DISABLED=1
 SHARED_SECRET_TOKEN=some_secret
 
