--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -3,6 +3,10 @@
     "next/core-web-vitals",
     "prettier"
   ],
+  "ignorePatterns": [
+    "lib/semantic-search/generated/**/*.js",
+    "lib/semantic-search/generated/**/*.mjs"
+  ],
   "rules": {
     "indent": [
       "error",
