--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "eventsource-parser": "^2.0.1",
     "focus-trap-react": "^10.3.0",
     "framer-motion": "^11.11.9",
+    "gray-matter": "^4.0.3",
     "i": "^0.3.7",
     "js-base64": "^3.7.7",
     "js-tiktoken": "^1.0.15",
@@ -73,6 +74,7 @@
     "lucide-react": "^0.323.0",
     "next": "14.2.15",
     "next-auth": "4.24.10",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.4",
     "posthog-js": "^1.174.0",
