fix posthog issue - question in https://posthog.com/docs/libraries/next-js

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -28,7 +28,8 @@
         "./*"
       ]
     },
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
