v-1 separate component for render iframe

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,7 +6,10 @@
   "rules": {
     "indent": [
       "error",
-      2
+      2,
+      {
+        "SwitchCase": 1
+      }
     ],
     "eol-last": [
       "error",
