--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -4,6 +4,7 @@ BACKEND_URL=http://localhost:8000
 SEMANTIC_SEARCH_URL=http://localhost:8080
 NEXT_OTEL_FETCH_DISABLED=1
 SHARED_SECRET_TOKEN=some_secret
+ENVIRONMENT=LITE
 
 # these must match what you have in your docker-compose-local-dev.yml for postgres
 # postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@{host}:5432/${POSTGRES_DB}
@@ -25,4 +26,4 @@ AUTH_GOOGLE_SECRET=
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-S3_IMGS_BUCKET=
+S3_TRACE_PAYLOADS_BUCKET=
