--- a/frontend/package.json
+++ b/frontend/package.json
@@ -90,6 +90,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-markdown": "^9.0.1",
+    "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.7",
     "react-select": "^5.9.0",
     "react-syntax-highlighter": "^15.6.1",
