--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,14 @@
     "format:check": "prettier --check \"{app,lib,components}**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.715.0",
+    "@aws-sdk/client-s3": "^3.726.0",
     "@clickhouse/client": "^1.10.0",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/lang-yaml": "^6.1.2",
-    "@codemirror/language": "^6.10.7",
-    "@codemirror/view": "^6.36.0",
+    "@codemirror/language": "^6.10.8",
+    "@codemirror/view": "^6.36.2",
     "@headlessui/react": "^2.2.0",
     "@lezer/highlight": "^1.2.1",
     "@monaco-editor/react": "^4.6.0",
@@ -49,55 +49,53 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@react-email/components": "^0.0.23",
+    "@react-email/components": "^0.0.31",
     "@react-email/tailwind": "^0.1.0",
-    "@supabase/supabase-js": "^2.47.9",
+    "@supabase/supabase-js": "^2.47.12",
     "@tanstack/react-table": "^8.20.6",
-    "@types/jsonwebtoken": "^9.0.7",
     "@uiw/codemirror-theme-github": "^4.23.7",
     "@uiw/codemirror-themes": "^4.23.7",
     "@uiw/react-codemirror": "^4.23.7",
-    "ace-builds": "^1.37.0",
+    "ace-builds": "^1.37.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^0.2.1",
+    "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.36.4",
+    "drizzle-orm": "^0.38.3",
     "eventsource-parser": "^2.0.1",
     "focus-trap-react": "^10.3.1",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.16.4",
     "gray-matter": "^4.0.3",
     "i": "^0.3.7",
     "js-base64": "^3.7.7",
-    "js-tiktoken": "^1.0.15",
+    "js-tiktoken": "^1.0.16",
     "json-2-csv": "^5.5.7",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.323.0",
-    "next": "14.2.15",
-    "next-auth": "4.24.10",
+    "lucide-react": "^0.468.0",
+    "next": "^15.1.4",
+    "next-auth": "^4.24.11",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.5",
     "posthog-js": "^1.205.0",
     "posthog-node": "^4.3.2",
     "re-resizable": "^6.10.3",
-    "react": "^18.3.1",
-    "react-ace": "^12.0.0",
+    "react": "^19.0.0",
+    "react-ace": "^13.0.0",
     "react-contenteditable": "^3.3.7",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-email": "^3.0.4",
-    "react-hot-toast": "^2.4.1",
+    "react-day-picker": "^9.5.0",
+    "react-dom": "^19.0.0",
+    "react-email": "^3.0.6",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
-    "react-intersection-observer": "^9.14.0",
-    "react-markdown": "^9.0.1",
+    "react-intersection-observer": "^9.14.1",
+    "react-markdown": "^9.0.3",
     "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.7",
     "react-select": "^5.9.0",
     "react-syntax-highlighter": "^15.6.1",
-    "react-tag-input-component": "^2.0.2",
-    "react-textarea-autosize": "^8.5.6",
+    "react-textarea-autosize": "^8.5.7",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.0",
     "remark-gfm": "^4.0.0",
@@ -105,28 +103,29 @@
     "resend": "^4.0.1",
     "sharp": "^0.33.5",
     "stripe": "^16.12.0",
-    "swr": "^2.2.5",
+    "swr": "^2.3.0",
     "uuid": "^9.0.1",
-    "yaml": "^2.6.1",
-    "yjs": "^13.6.20",
+    "yaml": "^2.7.0",
+    "yjs": "^13.6.21",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1",
-    "zustand": "^4.5.5"
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^22.10.2",
-    "@types/react": "^18.3.17",
-    "@types/react-dom": "^18.3.5",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^8.18.1",
-    "@typescript-eslint/parser": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.27.2",
-    "eslint": "^8.57.1",
-    "eslint-config-love": "^84.1.1",
-    "eslint-config-next": "14.2.15",
+    "drizzle-kit": "^0.30.1",
+    "eslint": "^9.17.0",
+    "eslint-config-love": "^112.0.0",
+    "eslint-config-next": "^15.1.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-node": "^11.1.0",
@@ -136,11 +135,10 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.7.2",
-    "view": "link:@types/@codemirror/view"
+    "typescript": "^5.7.3"
   },
   "prettier": {
     "arrowParens": "always",
