wip: store spans in qdrant

--- a/app-server/Cargo.toml
+++ b/app-server/Cargo.toml
@@ -68,6 +68,7 @@ base64 = "0.22.1"
 sodiumoxide = "0.2.7"
 actix-ws = "0.3.0"
 tokio-tungstenite = "*"
+prost-types = "0.13.4"
 
 
 [build-dependencies]
