--- a/semantic-search-service/Cargo.toml
+++ b/semantic-search-service/Cargo.toml
@@ -21,6 +21,10 @@ serde_json = "1.0.105"
 log = "0.4.20"
 dotenv = "0.15.0"
 uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
+bm25 = "2.2.0"
+indexmap = "2.7.0"
+chrono = { version = "0.4.39", features = ["serde"] }
+prost-types = "0.13.4"
 
 [build-dependencies]
 tonic-build = "0.12.3"
