--- a/docker-compose-local-dev.yml
+++ b/docker-compose-local-dev.yml
@@ -24,6 +24,28 @@ services:
       timeout: 5s
       retries: 5
 
+  clickhouse:
+    build:
+      context: ./clickhouse
+    container_name: clickhouse
+    ports:
+      - "8123:8123"
+    volumes:
+      - type: volume
+        source: clickhouse-data
+        target: /var/lib/clickhouse/
+      - type: volume
+        source: clickhouse-logs
+        target: /var/log/clickhouse-server/
+    cap_add:
+      - SYS_NICE
+      - NET_ADMIN
+      - IPC_LOCK
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+
   app-server:
     image: ghcr.io/lmnr-ai/app-server
     pull_policy: always
@@ -33,12 +55,17 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      clickhouse:
+        condition: service_started
+
     environment:
       PORT: 8000
       GRPC_PORT: 8001
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       SHARED_SECRET_TOKEN: ${SHARED_SECRET_TOKEN}
-      ENVIRONMENT: LITE # this disables runtime dependency on clickhouse, rabbitmq, semantic search, and python executor
+      ENVIRONMENT: LITE # this disables runtime dependency on rabbitmq, semantic search, and python executor
 
 volumes:
   postgres-data:
+  clickhouse-data:
+  clickhouse-logs:
