feat: add clickhouse to docker files, remove feature flags for clickhouse LAM-405 (#332)
* eval time progression (#210)

* initial work to compare evals

* remove unnecessary div

* design

---------

Co-authored-by: Din <dinmukhamed.mailibay@gmail.com>

* feat: add clickhouse to docker files, remove feature flags for clickhouse LAM-405

* feat: remove brackets

* fix: remove comment

* remove feature flags, FE, app-server

* fix: fixes, and revert back to port 5432

* feat: fix producer, consumer

* adjust postgres port

* fix: remove braces

* fix: add model column, filter

* fix: expand type, cleanup

* fix, remove ports

* feat: updated ports

* fix: remove comments

* update readme

---------

Co-authored-by: Dinmukhamed Mailibay <47117969+dinmukhamedm@users.noreply.github.com>
Co-authored-by: skull8888888 <skull8888888@gmail.com>
Co-authored-by: Din <dinmukhamed.mailibay@gmail.com>
Co-authored-by: Nidhi Singh <120259299+nidhi-wa@users.noreply.github.com>

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -4,16 +4,16 @@ BACKEND_URL=http://localhost:8000
 SEMANTIC_SEARCH_URL=http://localhost:8080
 NEXT_OTEL_FETCH_DISABLED=1
 SHARED_SECRET_TOKEN=some_secret
-ENVIRONMENT=LITE
 
 # these must match what you have in your docker-compose-local-dev.yml for postgres
-# postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@{host}:5432/${POSTGRES_DB}
-DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5432/postgres"
+# postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@{host}:${POSTGRES_PORT}/${POSTGRES_DB}
+DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5433/postgres"
 
 # replace with FULL if you are testing with a full stack
 # ENVIRONMENT=FULL
-ENVIRONMENT=LITE # this disables runtime dependency on clickhouse
-
+ENVIRONMENT=LITE
+CLICKHOUSE_USER=default
+CLICKHOUSE_URL=http://localhost:8123
 # for realtime
 SUPABASE_JWT_SECRET=
 # for auth
