--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,6 @@ name: lmnr
 services:
   postgres:
     image: postgres:16
-    ports:
-      - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
@@ -22,6 +20,26 @@ services:
       interval: 2s
       timeout: 5s
       retries: 5
+
+  clickhouse:
+    build:
+      context: ./clickhouse
+    container_name: clickhouse
+    volumes:
+      - type: volume
+        source: clickhouse-data
+        target: /var/lib/clickhouse/
+      - type: volume
+        source: clickhouse-logs
+        target: /var/log/clickhouse-server/
+    cap_add:
+      - SYS_NICE
+      - NET_ADMIN
+      - IPC_LOCK
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
 
   frontend:
     image: ghcr.io/lmnr-ai/frontend
@@ -44,18 +62,21 @@ services:
   app-server:
     image: ghcr.io/lmnr-ai/app-server
     pull_policy: always
-    ports:
-      - "8000:8000"
-      - "8001:8001"
     depends_on:
       postgres:
         condition: service_healthy
+      clickhouse:
+        condition: service_started
     environment:
       PORT: 8000
       GRPC_PORT: 8001
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       SHARED_SECRET_TOKEN: ${SHARED_SECRET_TOKEN}
-      ENVIRONMENT: LITE # this disables runtime dependency on clickhouse, rabbitmq, semantic search, and python executor
+      CLICKHOUSE_URL: http://clickhouse:8123
+      CLICKHOUSE_USER: ${CLICKHOUSE_USER}
+      ENVIRONMENT: LITE # this disables runtime dependency on rabbitmq, semantic search, and python executor
 
 volumes:
   postgres-data:
+  clickhouse-data:
+  clickhouse-logs:
