--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@mux/mux-player-react": "^2.9.1",
     "@novnc/novnc": "^1.5.0",
+    "@oneidentity/zstd-js": "^1.0.3",
     "@pnpm/types": "^9.4.2",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -100,6 +101,8 @@
     "reactflow": "^11.11.4",
     "recharts": "^2.15.0",
     "resend": "^4.0.1",
+    "rrweb": "2.0.0-alpha.4",
+    "rrweb-player": "1.0.0-alpha.4",
     "sharp": "^0.33.5",
     "stripe": "^16.12.0",
     "swr": "^2.3.0",
