add default AEAD key to .env (#367)
* add default AEAD key to .env

* expose backend ports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,9 @@ services:
   app-server:
     image: ghcr.io/lmnr-ai/app-server
     pull_policy: always
+    ports:
+      - "8000:8000"
+      - "8001:8001"
     depends_on:
       postgres:
         condition: service_healthy
@@ -75,6 +78,7 @@ services:
       CLICKHOUSE_URL: http://clickhouse:8123
       CLICKHOUSE_USER: ${CLICKHOUSE_USER}
       ENVIRONMENT: LITE # this disables runtime dependency on rabbitmq, semantic search, and python executor
+      AEAD_SECRET_KEY: ${AEAD_SECRET_KEY}
 
 volumes:
   postgres-data:
