--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -74,6 +74,9 @@ services:
 
   app-server:
     image: ghcr.io/lmnr-ai/app-server
+    ports:
+      - "8000:8000"
+      - "8001:8001"
     depends_on:
       semantic-search-service:
         condition: service_started
@@ -95,6 +98,7 @@ services:
       - CODE_EXECUTOR_URL=http://python-executor:8811
       - SHARED_SECRET_TOKEN=${SHARED_SECRET_TOKEN}
       - ENVIRONMENT=FULL
+      - AEAD_SECRET_KEY=${AEAD_SECRET_KEY}
   frontend:
     image: ghcr.io/lmnr-ai/frontend
     ports:
