added env for max connections

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -8,6 +8,7 @@ SHARED_SECRET_TOKEN=some_secret
 # these must match what you have in your docker-compose-local-dev.yml for postgres
 # postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@{host}:${POSTGRES_PORT}/${POSTGRES_DB}
 DATABASE_URL="postgres://postgres:postgres_passwordabc@localhost:5433/postgres"
+DATABASE_MAX_CONNECTIONS=10
 
 # replace with FULL if you are testing with a full stack
 # ENVIRONMENT=FULL
