feat: add simple ui, models provider, stream read

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,14 @@
     "format:check": "prettier --check \"{app,lib,components}**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@ai-sdk/amazon-bedrock": "^2.0.1",
+    "@ai-sdk/anthropic": "^1.1.8",
+    "@ai-sdk/azure": "^1.1.11",
+    "@ai-sdk/google": "^1.1.14",
+    "@ai-sdk/groq": "^1.1.9",
+    "@ai-sdk/mistral": "^1.1.11",
+    "@ai-sdk/openai": "^1.1.11",
+    "@ai-sdk/react": "^1.1.14",
     "@aws-sdk/client-s3": "^3.726.0",
     "@clickhouse/client": "^1.10.0",
     "@codemirror/lang-html": "^6.4.9",
@@ -60,6 +68,7 @@
     "@uiw/codemirror-themes": "^4.23.7",
     "@uiw/react-codemirror": "^4.23.7",
     "ace-builds": "^1.37.4",
+    "ai": "^4.1.39",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
@@ -92,6 +101,7 @@
     "react-dom": "^19.0.0",
     "react-email": "^3.0.6",
     "react-github-btn": "^1.4.0",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.1",
